PER-2154 - Capture notifications events and send email to users - Updated Notification/Note model. - Updated test and swagger def data exchange - Added timer - Adding handler for warning events
