# models/note.js
@@ -1,8 +1,9 @@
 var Note = model({
   name: 'Note',
   properties: {
-    user: { type: Sequelize.STRING, allowNull: true },
-    note: { type: Sequelize.TEXT, allowNull: true }
+    user: { type: Sequelize.BOOLEAN, allowNull: false },
+    closingNote: { type: Sequelize.STRING, allowNull: false },
+    content: { type: Sequelize.TEXT, allowNull: false }
   }
 });
 
